--- a/Grouper/.vscode/settings.json
+++ b/Grouper/.vscode/settings.json
@@ -2,6 +2,25 @@
     "files.associations": {
         "iostream": "cpp",
         "new": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "cmath": "cpp",
+        "cutter.C": "cpp",
+        "iosfwd": "cpp",
+        "chrono": "cpp",
+        "functional": "cpp",
+        "string": "cpp",
+        "random": "cpp",
+        "string_view": "cpp",
+        "array": "cpp",
+        "initializer_list": "cpp",
+        "utility": "cpp",
+        "optional": "cpp",
+        "istream": "cpp",
+        "ratio": "cpp",
+        "system_error": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "fstream": "cpp",
+        "test.C": "cpp"
     }
 }
