--- a/Grouper/Makefile
+++ b/Grouper/Makefile
@@ -15,7 +15,7 @@ LIBS      = ${FASTERAC_LIBS}   ${ROOT_LIBS} ${GTOOLS_L} ${GSL_LIBS} -lboost_file
 
 SRCS      = $(wildcard src/*.c++)
 OBJS      = $(patsubst src/%.c++,obj/%.o,$(SRCS))
-EXE       = Grouper Matcher Merger Calibration Res_electronic LifeTime Defect SIPM_Calibration Bi207
+EXE       = Grouper Matcher Merger Calibration Res_electronic LifeTime Defect SIPM_Calibration Bi207 SIPM_Matching SIPM_Dark
 
 all : $(EXE)
 
@@ -27,6 +27,8 @@ Res_electronic: obj/Res_electronic.o
 LifeTime: obj/LifeTime.o
 Defect: obj/Defect.o
 SIPM_Calibration: obj/SIPM_Calibration.o
+SIPM_Matching: obj/SIPM_Matching.o
+SIPM_Dark: obj/SIPM_Dark.o	
 Bi207: obj/Bi207.o
 
 $(EXE): $(OBJS) include/Detectors.hh include/Messenger.hh
