--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,7 @@
         "Plotting_points.C": "cpp",
         "ReaderGamma.C": "cpp",
         "EstimateCCDFfromHistogram.C": "cpp",
-        "extract_pdf_cdf.C": "cpp"
+        "extract_pdf_cdf.C": "cpp",
+        "Debug.C": "cpp"
     }
 }
