--- a/MCP/Makefile
+++ b/MCP/Makefile
@@ -7,11 +7,9 @@ ROOT_LIBS       = $(shell root-config --libs) -lSpectrum
 GSL_CFLAGS      = $(shell gsl-config --cflags)
 GSL_LIBS        = $(shell gsl-config --libs)
 
-GTOOLS_L = $(shell gtools_lib)
-
 CC        = g++
 CFLAGS    = ${FASTERAC_CFLAGS} ${ROOT_CFLAGS} ${GSL_CFLAGS} -Iinclude
-LIBS      = ${FASTERAC_LIBS}   ${ROOT_LIBS} ${GTOOLS_L} ${GSL_LIBS} -lboost_filesystem -lboost_system include/Detectors.hh include/Messenger.hh
+LIBS      = ${FASTERAC_LIBS}   ${ROOT_LIBS} ${GSL_LIBS} -lboost_filesystem -lboost_system
 
 SRCS      = $(wildcard src/*.c++)
 OBJS      = $(patsubst src/%.c++,obj/%.o,$(SRCS))
@@ -19,8 +17,8 @@ EXE       = Calibration
 
 all : $(EXE)
 
-$(EXE): $(OBJS) include/Detectors.hh include/Messenger.hh
-	${CC} -std=c++17 ${CFLAGS} ${LIBS} obj/$@.o -o $@ ../../lib/SignalDict/SignalDict.so
+$(EXE): $(OBJS)
+	${CC} -std=c++17 ${CFLAGS} ${LIBS} obj/$@.o -o $@
 
 obj/%.o: src/%.c++ include/%.hh
 	@mkdir -p obj
