--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,6 +78,11 @@
         "SiPM_Sub.C": "cpp",
         "GenerateDic.C": "cpp",
         "Test copy.C": "cpp",
-        "Test2.C": "cpp"
+        "Test2.C": "cpp",
+        "fast2root.C": "cpp",
+        "Root2Root.C": "cpp",
+        "Plotting_function.C": "cpp",
+        ".Plotting_points.C": "cpp",
+        "CRADLE_READER.C": "cpp"
     }
 }
